Bug 96382 - Edit character style - background color and border shadow are applied unwantedly
Summary: Edit character style - background color and border shadow are applied unwantedly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.6.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.4.0 target:5.3...
Keywords:
Depends on:
Blocks: Writer-Styles-Character
  Show dependency treegraph
 
Reported: 2015-12-10 10:06 UTC by Oliver Specht (CIB)
Modified: 2021-09-23 03:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2015-12-10 10:06:30 UTC
-open or create a writer document
-open Stylist and switch to Character Styles
-select a style with no color or border settings, e.g. "Footnote Anchor" and select 'Modify' in the context menu 
-notice that on the Organizer page under 'Contains' there is no color, shadow etc. listed
- switch to Highlighting and back to Organizer
-> "White transparent" appears under 'Contains'
- switch to Border and back to Organizer
-> 0,18cm, No Shadow appears under 'Contains'
Comment 1 Oliver Specht (CIB) 2015-12-10 11:16:50 UTC
The problem in the border page is caused by the ItemConnectionBase.
That connects a control to an SfxPoolItem and puts the item automatically if a value has changed. In this case the conversion of the width value of the ShadowItem changes the width slightly and that results in the unwanted shadow setting.
Comment 2 Commit Notification 2015-12-11 06:43:56 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e5246a6b679cfd15ba9ec6db23448066f34c7c08

tdf#96382: background color is not applied unintentionally

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2016-09-26 10:17:29 UTC
Hello Oliver,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 4 Xisco Faulí 2016-09-26 10:33:15 UTC
Changing status to NEW
Comment 5 Commit Notification 2016-12-12 20:25:40 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=429be969b39867d6d9f36978c9ac15b601e78ba6

Resolves: tdf#101588, do not prevent color de-selection tdf#96382 follow-up

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-12-13 10:02:17 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=638f40d16c9e0b01e3cb0f53d9d5703a361b2100&h=libreoffice-5-3

Resolves: tdf#101588, do not prevent color de-selection tdf#96382 follow-up

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-12-13 11:30:28 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=96068bd2c9dc17d9af7550ba5a02673c5c7eabad&h=libreoffice-5-2

Resolves: tdf#101588, do not prevent color de-selection tdf#96382 follow-up

It will be available in 5.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Thomas Lendo 2017-06-01 20:40:59 UTC
Test with character style "Footnote Characters":
- Switching to Font Effects, Position and Highlighting causes no changes in the Contains section of the Organizer tab.
- Switching to "Font" causes "11 pt" in the Contains section of the Organizer tab.
- Switching to "Borders" causes "Shadow: Gray, Not Transparent, 0,18 cm, No Shadow" in the Contains section of the Organizer tab.

Expected result:
If nothing is manually changed by the user, nothing should be shown in the Contains section of the Organizer tab.
Comment 9 Thomas Lendo 2017-06-01 20:42:35 UTC Comment hidden (obsolete)
Comment 10 Thomas Lendo 2018-09-18 06:39:00 UTC
Still reproducible with

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 18c5089df091bddeb8c2dc339776671964389040
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-09-12_23:24:12
Locale: de-AT (de_AT); Calc: CL
Comment 11 QA Administrators 2019-09-19 03:15:25 UTC Comment hidden (obsolete)
Comment 12 Thomas Lendo 2019-09-22 19:47:59 UTC
The only issue I can reproduce is when going to Highlighting tab, select 'Color' and select 'None' again. This activates 'Automatic,Transparent' in the 'Organizer' tab which it shouldn't.
Comment 13 Thomas Lendo 2019-09-22 19:48:28 UTC
Tested with Version: 6.4.0.0.alpha0+
Build ID: c2c0bcfc64c5fc0b8299e3143ced482d481d2df0
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-09-18_02:53:35
Comment 14 QA Administrators 2021-09-22 03:39:19 UTC Comment hidden (obsolete)
Comment 15 Oliver Specht (CIB) 2021-09-22 07:11:29 UTC
Tested in 7.0.6.2, Windows, doesn't occur anymore
Comment 16 QA Administrators 2021-09-23 03:33:52 UTC
Dear Oliver Specht (CIB),

To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year.

There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present.

If you have time, please do the following:

Test to see if the bug is still present with the latest version of LibreOffice from https://www.libreoffice.org/download/

If the bug is present, please leave a comment that includes the information from Help - About LibreOffice.
 
If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a comment that includes the information from Help - About LibreOffice.

Please DO NOT

Update the version field
Reply via email (please reply directly on the bug tracker)
Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not 
appropriate in this case)


If you want to do more to help you can test to see if your issue is a REGRESSION. To do so:
1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) from https://downloadarchive.documentfoundation.org/libreoffice/old/

2. Test your bug
3. Leave a comment with your results.
4a. If the bug was present with 3.3 - set version to 'inherited from OOo';
4b. If the bug was not present in 3.3 - add 'regression' to keyword


Feel free to come ask questions or to say hello in our QA chat: https://kiwiirc.com/nextclient/irc.freenode.net/#libreoffice-qa

Thank you for helping us make LibreOffice even better for everyone!

Warm Regards,
QA Team

MassPing-UntouchedBug