tdf#96382: background color is not applied unintentionally

background color attribute should only be applied in a dialog
if the user selects it

Change-Id: Idf0100ee5954d415265776e777eca0bafe2cd3be